Fixes for google sheet
fixed style bug causing link to be not 100% width
fixed bug causing not showing hint text under link

--- a/src/Frontend/src/components/googleSheet/utils.less
+++ b/src/Frontend/src/components/googleSheet/utils.less
@@ -1,6 +1,6 @@
 @import "/src/variables";
 
-.linkInput {
+label.linkInput {
   width: 100%;
   max-width: 1000px;
 }
